generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

model User {
  id Int @id @default(autoincrement())

  name     String
  email    String @unique
  password String

  createdAt DateTime @default(now())

  wallet   Wallet?

  payments Payment[]
}

model Payment {
  id Int @id @default(autoincrement())

  stripeId String? @unique
  currency String?
  amount         Decimal
  status         PaymentStatus
  paymentMethod PaymentMethod

  createdAt DateTime @default(now())

  userId Int
  user   User @relation(fields: [userId], references: [id])
}

model Wallet {
  id Int @id @default(autoincrement())

  debit_balance  Decimal @default(0.0)
  ticket_balance Decimal @default(0.0)
  credit_balance Decimal @default(0.0)

  last_updated DateTime @default(now())

  userId Int @unique
  user User @relation(fields: [userId], references: [id])
}

enum PaymentStatus {
  failed
  pending
  canceled
  completed
}

enum PaymentMethod {
  debit
  credit
  ticket
}