import { StripeConfig } from '../../../config/stripe.js';
import { ValidatorRules } from '../rules/payment_rules.js';
import { PublishPaymentQueue } from '../queues/payment_producer.js';
import { EmailService } from '../../email/service/email_service.js';
import { PaymentRepository } from '../repository/payment_repository.js';
import { UserRepository } from '../../user/repository/user_repository.js';
import { WalleRepository } from '../../wallet/repository/wallet_repository.js';

export class PaymentService {
  constructor() {
    this.stripe = new StripeConfig();
    this.emailService = new EmailService();
    this.userRepository = new UserRepository();
    this.validatorRules = new ValidatorRules();
    this.walleRepository = new WalleRepository();
    this.paymentQueue = new PublishPaymentQueue();
    this.paymentRepository = new PaymentRepository();
  };

  async createPaymentCredit({ amount, currency, payment_method, userId }) {
    try {
      const wallet = await this.walleRepository.findByUserId({ userId });

      if (!this.validatorRules.verifyCreditsInWallet({ credit_balance: wallet.credit_balance, amount })) {
        throw new Error('Você não tem créditos suficientes no cartão.');
      }

      const { id } = await this.stripe.paymentIntentsCredit({
        amount,
        currency,
        payment_method,
      });

      if (!id) {
        throw new Error('Erro ao criar o pagamento.')
      }

      const { sub_status, value } = await this.validatorRules.substracionWalletValueToDebit({ debit_balance: wallet.debit_balance, amount })
      
      if (!sub_status) {
        throw new Error('Erro ao calcular a subtração do pagamento.')
      }

      const updateWallet = await this.walleRepository.updateWallet({ userId, balanceType: 'debit_balance', balanceValue: value })
      
      if (!updateWallet) {
        throw new Error('Erro ao atualizar a carteira.');
      }

      const data = {
        userId,
        amount,
        currency,
        stripeId: id,
        status: "pending",
        paymentMethod: 'credit',
      };

      const payment = await this.paymentRepository.createPayment({ data })

      if (!payment) {
        throw new Error('Erro para criar o pagamento.')
      };

      if (payment.status !== 'pending') {
        throw new Error("Erro no status do pagamento.")
      }

      const queue = await this.paymentQueue.pub({  
        amount: payment.amount,
        status: payment.status,
        currency: payment.currency,
        stripeId: payment.stripeId,
        payment_method: payment_method,
      });

      if (!queue) {
        throw new Error('Erro ao envia o pagamento para a fila.')
      }

      return {
        stripeId, 
        paymentMethod,
        amount: res.amount, 
        status: payment.status, 
        currency: res.currency, 
      }
    } catch (err) {
      throw new Error(err.message);
    };
  };

  async confirmPayment({ stripeId }) {
    try {
      if (!stripeId) {
        throw new Error("Não existe um id para a transação do stripe.")
      }

      const { status } = await this.stripe.paymentIntentsRetrive({ stripeId });
      
      if (!this.validatorRules.verifyTransactionStatus({ status })) {
        throw new Error('Transação não foi atualizado.');
      }

      const paymentUpdated = await this.paymentRepository.updatePaymentStatusSucced({ stripeId })
      
      if (!paymentUpdated) {
        throw new Error('Pagamento não foi atualizado');
      }
      
      const user = await this.userRepository.findByUserId({ id: paymentUpdated.userId })

      if (!user) {
        throw new Error("Usuário não encontrado para efetuar o pagamento");
      }

      await this.emailService.sendMessageToPaymentSucced({
        stripeId,
        name: user.name,
        email: user.email,
        status: paymentUpdated.status,
        amount: paymentUpdated.amount,
        payment_method: paymentUpdated.paymentMethod,
      });
    } catch (err) {
      throw new Error(err.message);
    }
  };
}